# python-project-lvl2

./: .gitignore  .travis.yml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pythonapp.yml
gendiff/: __init__.py  build_diff.py  cli.py  constants.py  module.py  parser.py  parsers.py
gendiff/format/: __init__.py  json.py  nested.py
gendiff/formatters/: json_render.py  nested_render.py  plain_render.py
gendiff/renders/: __init__.py
gendiff/scripts/: __init__.py  gendiff.py
gendiff/tests/: test_generate_diff.py  test_parsers.py
gendiff/tests/fixtures/: after.json  after.yml  before.json  before.yml  build_diff.txt  diff_before_after.txt  diff_nested_structures.txt  diff_plain_files.txt
tests/: test_generate_diff.py
tests/fixtures/: build_diff.txt  formatter_json.txt  formatter_nested.txt  formatter_plain.txt
