[tool.poetry]
name = "karomag_gendiff"
version = "0.1.0"
description = ""
authors = ["Karomag <roma-novikov@mail.ru>"]
packages = [
    { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.13.3"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
